--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Pogrubiator spekator</title>
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
-	<script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.11.1.min.js"></script>
-</head>
-<body>
-	<div id="uploadDiv"></div>
-	<div class="dropDivClass" id="dropDiv">Przeciągnij w to miejsce plik .TXT</div>
-
-
-
-	<script type="text/javascript" src="js/filedrag.js"></script>
-
-</body>
+    <head>
+        <title>Pogrubiator spekator</title>
+        <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.5.0/pure-min.css">
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.min.js"></script>
+    </head>
+    <body>
+        <div id="uploadWrapper">
+            <div class="dropDivClass" id="dropDiv">Drop a .TXT file here</div>
+            <div class="uploadErrors" id="uploadError">smeagle</div>
+        </div>
+        <script type="text/javascript" src="js/filedrag.js"></script>
+    </body>
 </html>
