--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             <div class="dropDivClass" id="dropDiv">Drop a .TXT file here</div>
             <div class="uploadErrors" id="uploadError">smeagle</div>
         </div>
+        <div id='playerWrapper' class="hidden">
+            <div id='playerDiv' class='playerClass'>
+            </div>
+        </div>
         <script type="text/javascript" src="js/filedrag.js"></script>
     </body>
 </html>
