--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
         </div>
         <div id="uploadWrapper">
             <div class="dropDivClass" id="dropDiv">Drop a .TXT file here</div>
-
             <div class="uploadErrors" id="uploadError"></div>
-                        <div class="aboutDiv" id="about"></span>Given file will be parsed and put out as a chain of words with the gravity points of each emboldened and it's color changed to catch user attention. User can fully customize word-flashing speed given in words per minute.</div>
+            <div class="aboutDiv" id="about"></span>Given file will be parsed and put out as a chain of words with the gravity points of each emboldened and it's color changed to catch user attention. User can fully customize word-flashing speed given in words per minute.</div>
         </div>
         <div id='playerWrapper' class="hidden">
             <div id='playerDiv' class='playerClass hidden'>
@@ -25,15 +24,14 @@
                 <!--                 <div class="middleSelector"></div> -->
             </div>
             <div id="controlGroup">
-                <form class="pure-form">
+                <form id="controlForm" class="pure-form">
                     <fieldset class="pure-group">
                         <input type="number" id="wpm" placeholder="Words Per Minute">
                     </fieldset>
-                </fieldset>
-            </form>
-            <button id="startDisplayingButton" class="pure-button"><i class="fa fa-play"></i>Start</button>
+                </form>
+            	<button id="startDisplayingButton" class="pure-button"><i class="fa fa-play"></i>Start</button>
+            </div>
         </div>
-    </div>
-    <script type="text/javascript" src="js/filedrag.js" charset="utf-8"></script>
-</body>
+        <script type="text/javascript" src="js/filedrag.js" charset="utf-8"></script>
+    </body>
 </html>
