--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         </div>
         <div id="uploadWrapper">
             <div class="dropDivClass" id="dropDiv">Drop a .TXT file here</div>
+            <input type="file" id="hiddenUpload">
             <div class="uploadErrors" id="uploadError"></div>
             <div class="aboutDiv" id="about"></span>Given file will be parsed and put out as a chain of words with the gravity points of each emboldened and it's color changed to catch user attention. User can fully customize word-flashing speed given in words per minute.</div>
         </div>
@@ -29,7 +30,7 @@
                         <input type="number" id="wpm" placeholder="Words Per Minute">
                     </fieldset>
                 </form>
-            	<button id="startDisplayingButton" class="pure-button"><i class="fa fa-play"></i>Start</button>
+                <button id="startDisplayingButton" class="pure-button"><i class="fa fa-play"></i>Start</button>
             </div>
         </div>
         <script type="text/javascript" src="js/filedrag.js" charset="utf-8"></script>
