Fixed text centering

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         </div>
         <div id='playerWrapper' class="hidden">
             <div id='playerDiv' class='playerClass hidden'>
-                <div id="textReader"></div>
-                <!--                 <div class="middleSelector"></div> -->
+                <div id="textReader">
+                    <div id="leftText"></div>
+                    <div id="middleText"></div>
+                    <div id="rightText"></div>
+                </div>
+                <div class="middleSelector"></div>
             </div>
             <div id="controlGroup">
                 <form id="controlForm" class="pure-form">
